# Smart_Calculator

src/: CMakeCache.txt  CMakeCache.txt.prev  CMakeLists.txt  Makefile  RESULT_TEST.O.txt  cmake_install.cmake  dvi.html  main.cc  main_model.gcda  main_model_test.gcda  main_model_test.gcno  mainwindow.cc  mainwindow.h  mainwindow.ui  qtcsettings.cmake
src/.cmake/api/v1/reply/: cache-v2-674955b414055a2b99ba.json  cache-v2-a633f5b1235c70c7f148.json  cmakeFiles-v1-bebf59fc4cb40a46427c.json  codemodel-v2-5b04cb966c40c7543460.json  codemodel-v2-6dc46500fe00c57df89a.json  codemodel-v2-fdbf42762159dc7b78e3.json  directory-.-Debug-c3c131b1bc555f4a5a0b.json  directory-resources-Debug-c7f6e081d69c45024728.json  index-2023-06-20T19-29-49-0849.json  index-2023-06-20T20-41-49-0522.json  index-2023-06-21T19-16-56-0675.json  target-TameCalc-Debug-950d45cfd7a1d8d2857b.json  target-TameCalc-Debug-98f7762c3d68340d2732.json  target-TameCalc-Debug-f692375c0c52a5ae02be.json  target-TameCalc_autogen-Debug-aef7ed0ad26f6cc59a91.json  target-qcustomplot-Debug-c0b0994b3d70c182bef5.json
src/.cmake/api/v1/reply.prev/: cmakeFiles-v1-74e51c4e3d7a884eb47a.json  cmakeFiles-v1-bc27da993e5e7737d964.json  codemodel-v2-562d043025417f30df16.json  codemodel-v2-f26071c9c2f0bd1a5e8d.json  directory-.-Debug-a4e5f5ec69fe7f3327ce.json  index-2023-06-20T20-36-51-0644.json  index-2023-06-21T18-42-27-0999.json  target-TameCalc-Debug-04ca4035a1d94507ee25.json  target-TameCalc-Debug-9e66d9bdbd02201732ec.json  target-qcustomplot-Debug-deeafeae247f35c79e78.json  target-qcustomplot_autogen-Debug-885953b435027963914f.json
src/.qtc_clangd/: compile_commands.json
src/.qtc_clangd/.cache/clangd/index/: QLabel.B7650264DB9D8666.idx  (+161 more)
src/TameCalc.app/Contents/MacOS/: TameCalc
src/TameCalc_autogen/: mocs_compilation.cpp
src/TameCalc_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
src/TameCalc_autogen/OTUN7GXZT4/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_view.cpp  moc_view.cpp.d
src/TameCalc_autogen/include/: ui_mainwindow.h
src/controller/: controller.h  credit_controller.h  main_controller.h
src/model/: a.out  credit_model.cc  credit_model.h  db.cc  main_model.cc  main_model.h  model.cc  model.h  test  test.cc
src/resources/: Makefile  cmake_install.cmake  contain_objects.h  libqcustomplot.2.dylib  libqcustomplot.dylib  qcustomplot.h
src/resources/qcustomplot_autogen/: moc_predefs.h
src/resources/qcustomplot_autogen/EWIEGA46WW/: moc_qcustomplot.cpp  moc_qcustomplot.cpp.d
src/tests/: 1.cc  a.out  main_model_test.cc  model_test.cc
src/view/: credit_calc.cc  credit_calc.h  credit_calc.ui  main_calc.cc  main_calc.h  main_calc.ui  mainwindow.cc  mainwindow.h  mainwindow.ui
(+176 files in other folders)
